# radar

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  .grype.yaml  .pre-commit-config.yaml  =0.20.0  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  SKILL.md  bandit.yaml  cli-schema.json  config.yaml  grype.yaml  pyproject.toml
.auto-claude/specs/001-review-and-fix-report-architecture-issues/: implementation_plan.json  iteration_issues.json
.auto-claude/specs/018-eliminate-duplicate-date-utility-functions-across-/: build-progress.txt  implementation_plan.json
.auto-claude/specs/023-read-unread-tracking-article-bookmarking/: implementation_plan.json
.claude/: gsd-file-manifest.json
.claude-flow/agents/: store.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.10-MILESTONE-AUDIT.md  v1.11-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: article-list-date-filter-no-results.md  arxiv-embedding-slow.md  circular-import-models-template.md  crawl-403-qbitai.md  feedship-fetch-timeouts-2026-04-07.md  feedship-installed-feed-discovery-failure.md  feedtype-json-serialization.md  fetch-all-circuit-breaker-and-settings-error.md  fetch-hangs-at-zero-percent.md  fetch-stuck-37-percent.md  github-trending-duplicate-articles.md  github-trending-star-parsing-zero.md  github-trending-stars-zero.md  github-trending-text-handler-error.md  knowledge-base.md  openai-feed-discovery-failure.md  rssprovider-discover-hang.md  semantic-search-only-2-results.md  stealth-fetcher-timeout.md  summarize-content-fetch.md  youtube-feed-add-zsh-error.md
.planning/debug/resolved/: article-list-count-has-more-bug.md  chromadb-batch-add-metadata-error.md  feed-add-metadata-not-saved-update.md  nitterprovider-fetch-zero-articles.md  tls-connect-deepmind.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.10-REQUIREMENTS.md  v1.10-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md
.planning/phases/02-search-refresh/: 02-03-SUMMARY.md
.planning/phases/03-web-crawling/: 03-01-SUMMARY.md
.planning/phases/04-github-api-client-releases-integration/: 04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/04-http-resilience-rate-limiting/: 04-PLAN.md
.planning/phases/045-discovery-core-architecture/: 045-PLAN.md
.planning/phases/05-changelog-detection-scraping/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-unified-display-refresh-integration/: 06-01-PLAN.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-SUMMARY.md
.planning/phases/07-tagging-system/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md
.planning/phases/08-github-url-metadata/: 08-01-PLAN.md  08-01-SUMMARY.md  08-GITHUB-URL-METADATA-CONTEXT.md  08-RESEARCH.md
.planning/phases/08.1-unified-feed-add/: 08.1-01-PLAN.md  08.1-CONTEXT.md  08.1-DISCUSSION-LOG.md
.planning/phases/09-enhanced-article-list/: 09-01-PLAN.md  (+1 more)
.planning/quick/: 260328-522-PLAN.md  260328-522-SUMMARY.md  260328-522-VERIFICATION.md
.planning/reports/: MILESTONE_SUMMARY-v1.4.md  MILESTONE_SUMMARY-v1.7.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.swarm/: model-router-state.json
docs/: Automatic Discovery Feed.md  Search.md  WebpageProvider.md  automatic-discovery-feed.md  cli-commands.md  cli.md  feed.md  optional-dependencies.md  pre-release-checklist.md  profiling.md  providers.md  release.md  structure.md  technology-stack.md
scripts/: evaluate_news_quality.py  migrate_add_article_link_unique.py
skills/ai-daily/: REPORT_FORMAT.md  SKILL.md  SKILL.md.bak
skills/feedship/: SKILL.md
skills/feedship-ai-daily/: FINAL_FORMAT.md  REPORT_FORMAT.md  SKILL.md
src/: articles.py  cli.py  crawl.py  db.py  db_migrations.py  feeds.py  github.py  github_utils.py  models.py  tag_rules.py  tags.py
src/application/: __init__.py  article_view.py  articles.py  asyncio_utils.py  combine.py  config.py  crawl.py  cross_encoder.py  dedup.py  feed.py  fetch.py  llm.py  opml.py  related.py  report.py  report_generation.py  rerank.py  search.py  summarize.py  tag_management.py  tags.py
src/cli/: __init__.py  __main__.py  article.py  crawl.py  discover.py  feed.py  info.py  report.py  summarize.py  tag.py  ui.py
src/discovery/: __init__.py  common_paths.py  deep_crawl.py  fetcher.py  models.py  parallel_probe.py  parser.py
src/llm/: __init__.py  chains.py  core.py  evaluator.py  output_models.py
src/providers/: __init__.py  base.py  default_provider.py  default_rss_provider.py  github_provider.py  github_release_provider.py  github_trending_provider.py  nitter_provider.py  rss_provider.py  tavily_provider.py  webpage_provider.py
src/rss_reader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/storage/: __init__.py  sqlite.py  vector.py
src/tags/: ai_tagging.py  default_tag_parser.py  release_tag_parser.py  tag_rules.py
src/utils/: __init__.py  asyncio_utils.py  github.py  scraping_utils.py
templates/: ai_daily_report.md.j2
tests/: conftest.py  test_ai_tagging.py  test_article_view.py  test_cli.py  test_config.py  test_fetch.py  test_github_trending_provider.py  test_llm.py  test_models.py  test_opml.py  test_providers.py  test_report.py  test_search.py  test_storage.py  test_tavily_provider.py
tests/fixtures/: sample.opml  test_duplicate.opml  with_groups.opml
(+297 files in other folders)
