[project]
name = "feedship"
version = "1.7.9"
description = "A personal information delivery system - collect, subscribe to, and organize information sources from the internet"
requires-python = ">=3.10, <3.13"
dependencies = [
    "feedparser>=6.0.0,<7",  # CVE: XML entity expansion / billion-laughs (historic CVEs in <6.0)
    "httpx>=0.28.0,<0.29.0",  # SSRF CVEs fixed in 0.27+; grype will track future vulns
    "click>=8.1.0",
    "beautifulsoup4>=4.12.0",
    "cachetools>=5.3.0",
    "lxml>=6.0.0,<7.0.0",  # Many historic CVEs in lxml < 5.0; major version cap is conservative
    "rich>=13.0.0",
    "PyGithub>=2.0.0",
    "dynaconf>=3.2.13",
    "trafilatura>=1.0.0,<1.11",
    "robotexclusionrulesparser>=1.7.1",
    "platformdirs>=4.9.4",
    "numpy>=1.26.0,<2",
    "scikit-learn>=1.7.2",
    "pyyaml>=6.0.3,<6.0.4",  # CVE-2022-28463 (code exec in < 6.0.1); grype monitors future patches
    "uvloop>=0.22.0",  # async event loop
    "nanoid>=2.0.0",  # URL-safe ID generation
    "scrapling>=0.4.0",  # CSS-selector HTML parsing
    "msgspec>=0.20.0",  # Required by scrapling browser engine
    "tavily-python>=0.3.0",  # Tavily AI search SDK
    "litellm>=1.83.0",  # Unified LLM client (OpenAI/Ollama/Azure/Anthropic)
    "tiktoken>=0.8.0",  # Token counting for content truncation
    "jinja2>=3.0.0,<3.1.7",  # Template rendering for reports (CVE-2025-27516 path traversal fix in 3.1.4+)
    "questionary>=2.1.0,<3.0.0",  # Interactive CLI prompts (multi-select, confirm, etc.)
    "psutil>=5.9.0",  # System memory monitoring for memory guard
    "pydantic-settings>=2.0.0",  # Pydantic BaseSettings for config
    "curl-cffi>=0.14.0",
    "playwright>=1.58.0",
    "browserforge>=1.2.4",
    "patchright>=1.58.2",
    "langchain-core>=0.3.0",
    "datasketch>=1.6.4",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-click>=1.1.0",
    "pytest-httpx>=0.36.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
]
ml = [
    "chromadb>=0.4.0,<1.0",
    "sentence-transformers>=3.0.0,<4.0",  # Model loading from untrusted sources (CVE risk)
    "torch>=2.0.0; python_version < '3.13'",
    "safetensors>=0.4.3",
    "transformers>=4.40.0,<5.0",
]
cloudflare = [
    "scrapling>=0.4.0",
    "patchright>=1.0.0",  # Required by scrapling StealthyFetcher
    "playwright>=1.49.0",
    "curl-cffi>=0.14.0",
    "socksio>=1.0.0",
    "browserforge>=1.2.0",
]

[project.scripts]
feedship = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "asyncio: mark test as async",
    "integration: integration test requiring full app",
    "slow: tests that take significant time",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle errors & warnings
    "F",       # Pyflakes
    "I",       # isort import sorting
    "UP",      # pyupgrade modernization
    "B",       # flake8-bugbear common traps
    "C4",      # flake8-comprehensions comprehension improvements
    "SIM",     # flake8-simplify simplify code
]
ignore = ["E501"]  # line too long

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"src/cli/*.py" = ["E402"]
"tests/**/*.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
