[project]
name = "feedship"
version = "1.7.9"
description = "A personal information delivery system - collect, subscribe to, and organize information sources from the internet"
requires-python = ">=3.10, <3.13"
dependencies = [
    "feedparser>=6.0.0,<7",  # CVE: XML entity expansion / billion-laughs (historic CVEs in <6.0)
    "httpx>=0.28.0,<0.29.0",  # SSRF CVEs fixed in 0.27+; grype will track future vulns
    "click>=8.1.0,<9",  # Stable CLI framework; major version cap is conservative
    "beautifulsoup4>=4.12.0,<4.13",  # HTML parsing edge-case vulns in malformed markup; cap prevents unexpected parser changes
    "cachetools>=5.3.0,<6",  # Pure-Python cache impl; stable API; major cap is belt-and-suspenders
    "lxml>=6.0.0,<7.0.0",  # Many historic CVEs in lxml < 5.0; major version cap is conservative
    "rich>=13.0.0,<14",  # Terminal formatting; stable API; major cap is belt-and-suspenders
    "PyGithub>=2.0.0,<3",  # GitHub API client; major version cap for belt-and-suspenders
    "dynaconf>=3.2.13,<4",  # Config library; stable; major cap is belt-and-suspenders
    "trafilatura>=1.0.0,<1.11",
    "robotexclusionrulesparser>=1.7.1,<2",  # robots.txt parser; stable; major cap is belt-and-suspenders
    "platformdirs>=4.9.4,<5",  # Standard-library path helper; very stable; major cap is conservative
    "numpy>=1.26.0,<2",
    "scikit-learn>=1.7.2,<1.8",  # Remote pickle/model-file loading risk (CVE-class); conservative minor cap
    "pyyaml>=6.0.3,<6.0.4",  # CVE-2022-28463 (code exec in < 6.0.1); grype monitors future patches
    "uvloop>=0.22.0,<0.23",  # libuv async loop wrapper; conservative minor cap
    "nanoid>=2.0.0,<4",  # URL-safe ID generation; very stable; major cap is belt-and-suspenders
    "scrapling>=0.4.0,<1",  # HTML parsing lib; conservative major cap
    "msgspec>=0.20.0,<1",  # Serialization lib; conservative major cap
    "tavily-python>=0.3.0,<1",  # Tavily API SDK; major cap is belt-and-suspenders
    "litellm>=1.83.0,<1.85",  # Unified LLM client; prompt-injection / SSRF surface; conservative minor cap
    "tiktoken>=0.8.0,<0.9",  # Tokenizer; conservative minor cap (native extensions, compatibility risk)
    "jinja2>=3.0.0,<3.1.7",  # Template rendering for reports (CVE-2025-27516 path traversal fix in 3.1.4+)
    "questionary>=2.1.0,<3.0.0",  # Interactive CLI prompts (multi-select, confirm, etc.)
    "psutil>=5.9.0,<6.2",  # CVE-2024-52301 (privilege escalation in < 6.1.0); conservative minor cap
    "pydantic-settings>=2.0.0,<3",  # Pydantic BaseSettings for config; major cap is belt-and-suspenders
    "curl-cffi>=0.15.0,<0.16",  # SSRF / header-injection surface; CVE-2026-33752 fixed in 0.15.0
    "cryptography>=46.0.7,<47",  # CVE-2026-39892 fix; transitive dep, pin directly
    "playwright>=1.58.0,<1.62",  # Browser automation; CVE history (arbitrary URL loading); conservative minor cap
    "browserforge>=1.2.4,<2",  # Browser toolkit; major cap is belt-and-suspenders
    "patchright>=1.58.2,<1.62",  # Playwright fork; CVE history (arbitrary URL loading); conservative minor cap
    "langchain-core>=1.2.22,<2",  # LangChain deserialization CVEs fixed in 1.2.22
    "langchain-litellm>=0.6.4,<1",  # LiteLLM LangChain integration
    "datasketch>=1.6.4,<2",  # Probabilistic data structures; major cap is belt-and-suspenders
    "transformers>=5.0.0,<5.1",  # GHSA-69w3-r845-3855 fixed in 5.0.0
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2,<10",  # Testing framework; major cap is belt-and-suspenders
    "pytest-asyncio>=0.23.0,<1.0",  # Async pytest plugin; stable; conservative
    "pytest-cov>=7.0.0,<8",  # Coverage plugin; stable; major cap is belt-and-suspenders
    "pytest-mock>=3.15.0,<4",  # Mocking plugin; stable; major cap is belt-and-suspenders
    "pytest-click>=1.1.0,<2",  # Click plugin for pytest; major cap is belt-and-suspenders
    "pytest-httpx>=0.36.0,<1",  # HTTPX plugin for pytest; major cap is belt-and-suspenders
    "pytest-xdist>=3.8.0,<4",  # Parallel test runner; stable; major cap is belt-and-suspenders
    "ruff>=0.6.0,<1",  # Linter; stable; major cap is belt-and-suspenders
    "pre-commit>=3.0.0,<4",  # Git hooks; stable; major cap is belt-and-suspenders
]
ml = [
    "chromadb>=0.4.0,<1.0",
    "sentence-transformers>=5.0.0,<5.5",  # Model loading from untrusted sources (CVE risk); 5.x supports transformers 5.x
    "torch>=2.0.0; python_version < '3.13'",
    "safetensors>=0.4.3,<0.5",  # CVE-2023-1582 (RCE via malicious model files in <0.16.0); major cap is belt-and-suspenders
    "transformers>=5.0.0,<5.1",  # GHSA-69w3-r845-3855 fixed in 5.0.0
]
cloudflare = [
    "scrapling>=0.4.0,<1",
    "patchright>=1.0.0,<1.62",  # Required by scrapling StealthyFetcher; CVE history (arbitrary URL loading)
    "playwright>=1.49.0,<1.62",  # Browser automation; CVE history (arbitrary URL loading)
    "curl-cffi>=0.15.0,<0.16",  # SSRF / header-injection surface; CVE-2026-33752 fixed in 0.15.0
    "socksio>=1.0.0,<2",  # SOCKS protocol impl; major cap is belt-and-suspenders
    "browserforge>=1.2.0,<2",  # Browser toolkit; major cap is belt-and-suspenders
]

[project.scripts]
feedship = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "asyncio: mark test as async",
    "integration: integration test requiring full app",
    "slow: tests that take significant time",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle errors & warnings
    "F",       # Pyflakes
    "I",       # isort import sorting
    "UP",      # pyupgrade modernization
    "B",       # flake8-bugbear common traps
    "C4",      # flake8-comprehensions comprehension improvements
    "SIM",     # flake8-simplify simplify code
]
ignore = ["E501"]  # line too long

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"src/cli/*.py" = ["E402"]
"tests/**/*.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
